# claudecode_webui

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSOLIDATE_MESSAGE_HANDLING.md  DEVELOPMENT_PLAN.md  ICON_MAPPING.md  LICENSE.md  LOG_OVERHAUL.md  README.md  RUN_GUIDE.md  SPEC.md  TOOL_HANDLERS.md  USER_TESTING_TRACKING.md  demo_session.py  main.py  plan-issue-1052.md  plan-issue-1230.md  pyproject.toml
.claude/: API_REFERENCE.md  COMMUNICATION_PROTOCOL.md  MINION_TEMPLATE.md  QUICK_REFERENCE.md  README.md  settings.local.json
docker/: Dockerfile.dev  entrypoint.sh
docs/: test.txt
frontend/: .env.example  .gitignore  BACKEND_MESSAGE_FORMATS.md  CLAUDE.md  MIGRATION_PLAN.md  PHASE1_COMPLETE.md  PHASE3_ARCHITECTURE.md  README.md  TESTING.md  index.html  package.json  playwright.config.ts  vite.config.js  vitest.config.js  vitest.setup.js
legion_proposal/: INCORPORATION_STATUS.md  PHASE_5_DETAILED_PLAN.md  legion_feedback_and_recommendations.md  legion_implementation_plan.md  legion_mcp_architecture_summary.md  legion_system_requirements.md  legion_technical_design.md  legion_ux_design.md
scripts/: test_hook.sh
src/: __init__.py  analytics_store.py  application_service.py  claude_sdk.py  config_manager.py  config_resolution.py  credential_vault.py  data_storage.py  docker_utils.py  error_handler.py  event_queue.py  exception_handlers.py  file_upload.py  history_distiller.py  legion_system.py  litellm_proxy_manager.py  logging_config.py  mcp_config_manager.py  message_parser.py  mock_sdk.py  model_limits.py  oauth_manager.py  oauth_refresh_manager.py  permission_resolver.py  permission_service.py  profile_manager.py  project_manager.py  provider_catalog.py  queue_manager.py  queue_processor.py  (+15 more)
(+688 files in other folders)
